--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="write_passwd">Enter Secret Password</string>
     <string name="help">Help</string>
     <string name="sign_in">Sign In</string>
-    <string name="feedback">Contact</string>
+    <string name="feedback">Support</string>
     <string name="about">About</string>
     <string name="toast_encryption">Text is encrypted in the picuture, Now you can save!</string>
     <string name="about_text">"Crytographic Technique,To Encrypt the image\n HiDevs Developers\n Thank you for using this Application."</string>
@@ -34,7 +34,11 @@
         4.Make sure you need to wait for sometime during encryption process.\n\n\n
         **Terms and Conditions**\n
         Don\'t use this application for any illegal activities.\n
-        If it happens, then dont blame developers\n
+        If it happens, then dont blame developers\n\n
+        **Support**\n
+        If you need any support or to contact technical assistant, feel free to ask our CryptIMG 24/7 SupportTeam.\n
+        Technical issues related to encryption will be solved by our Team.\n
+        For some validation purpose and check violation, we have monitor your activities.\n\n\n
         **Thank You.**\n
         **Have a great day.**
     </string>
